--- a/productos/producto1.html
+++ b/productos/producto1.html
@@ -25,7 +25,7 @@
         <section class="producto-detalle">
             <img src="../img//5f91d278cf8cd-514118-500x500.jpg" alt="Producto 1">
             <div class="producto-info">
-                <h2>Pantalon Gran Trifolio Lineal</h2>
+                <h2>Pantalon Trifolio Delineado Adidas</h2>
                 <p>Las reglas no aplican los fines de semana. Te puedes dar el lujo de usar el botón de repetición de alarma un par de veces más. Relájate en casa con ropa cómoda y despreocúpate de todo. Solo asegúrate de tener este pantalón adidas a la mano cuando llega el sábado en la mañana. Su suave tejido de felpa francesa te mantiene cómodo mientras ves episodio tras episodio de tu nueva serie favorita.
 
                     Este/a modelo mide 188cm, lleva un talle m. Su pecho mide 95cm y su cintura 81cm.</p>
