--- a/productos/producto2.html
+++ b/productos/producto2.html
@@ -25,7 +25,7 @@
         <section class="producto-detalle">
             <img src="../img//57e2a7b719158-418253-500x500.jpg" alt ="Producto 2">
             <div class="producto-info">
-                <h2>Campera Jeremy Scott</h2>
+                <h2>Campera Grey Leo Adidas</h2>
                 <p>Campera Tracktop para hombres Adidas Originals Grey Leo, diseñada por Jeremy Scott.</p>
                 <p>Precio: $260.000</p>
                 <button>Añadir al Carrito</button>
