--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <h1></h1>
             <nav>
                 <ul>
-                    <li><a href="productos/producto1.html">Producto 1</a></li>
-                    <li><a href="productos/producto2.html">Producto 2</a></li>
-                    <li><a href="productos/producto3.html">Producto 3</a></li>
+                    <li><a href="productos/producto1.html">Pantalón</a></li>
+                    <li><a href="productos/producto2.html">Campera</a></li>
+                    <li><a href="productos/producto3.html">Calzado</a></li>
                     <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
